--- a/style/_vars.scss
+++ b/style/_vars.scss
@@ -8,6 +8,12 @@ $label-color: #8e9091;
 
 $registration: #5db052;
 
+$registration-ho: #397231;
+
 $facebook: #4167b3;
 
+$facebook-ho: #294170;
+
 $btn-text-color: #ffff;
+
+$svg-col: #c3c3c3;
