--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -24,95 +25,164 @@ select {
 body {
   height: 100vh;
   background-color: #36516c;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 body .container {
   background-color: #f6f8fa;
   width: 550px;
   padding: 40px;
 }
+
 body .container h1 {
   text-align: center;
   font-size: 0.9rem;
 }
+
 body .container h2 {
   text-align: center;
   font-size: 0.9rem;
   font-weight: 500;
   margin: 10px 0 30px 0;
 }
+
 body .container form {
   width: 60%;
   margin: 0 auto;
 }
+
 body .container form input {
   width: 100%;
   padding-left: 10px;
 }
+
 body .container form input:first-of-type {
   margin-bottom: 15px;
 }
-body .container form input:focus::-moz-placeholder {
+
+body .container form input:focus::-webkit-input-placeholder {
   color: #bbbbbb;
 }
+
+body .container form input:focus:-ms-input-placeholder {
+  color: #bbbbbb;
+}
+
+body .container form input:focus::-ms-input-placeholder {
+  color: #bbbbbb;
+}
+
 body .container form input:focus::placeholder {
   color: #bbbbbb;
 }
+
 body .container form .birthday {
   width: 100%;
 }
+
 body .container form label {
   display: block;
   font-size: 0.9rem;
   color: #8e9091;
   margin: 20px 0 15px 0;
 }
-body .container form select {
+
+body .container form .custom-select {
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+
+body .container form .custom-select select {
   padding-left: 10px;
   color: #8e9091;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background-image: url("../IMG_0288.jpg");
-  background-repeat: no-repeat;
-  background-position: right center;
 }
-body .container form :nth-child(4) {
+
+body .container form .custom-select select:first-of-type {
   width: 25%;
 }
-body .container form :nth-child(5) {
-  width: 40%;
+
+body .container form .custom-select select:nth-of-type(2) {
+  width: 42%;
   margin: 0 5px;
 }
-body .container form :nth-child(6) {
+
+body .container form .custom-select select:last-of-type {
   width: 25%;
 }
+
+body .container form .custom-select .arrow-down-container svg {
+  fill: #c3c3c3;
+  position: absolute;
+  top: 44%;
+  right: 10px;
+  width: 10px;
+  height: 10px;
+}
+
+body .container form .custom-select .arrow-down-container svg:first-of-type {
+  right: 219px;
+}
+
+body .container form .custom-select .arrow-down-container svg:nth-of-type(2) {
+  right: 91px;
+}
+
 body .container form button {
   width: 100%;
   margin: 15px 0;
-  color: white;
+  color: #ffff;
   font-weight: bold;
 }
-body .container form .or {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+body .container form button:first-of-type {
+  background-color: #5db052;
 }
+
+body .container form button:first-of-type:hover {
+  background-color: #397231;
+}
+
+body .container form button:last-of-type {
+  background-color: #4167b3;
+  margin-bottom: 0;
+}
+
+body .container form button:last-of-type:hover {
+  background-color: #294170;
+}
+
+body .container form .or {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 body .container form .or hr {
   margin-top: 2px;
   width: 35px;
 }
+
 body .container form .or p {
   font-size: 0.8rem;
   margin: 0 10px;
   color: #8e9091;
 }
-body .container form button:first-of-type {
-  background-color: #5db052;
-}
-body .container form button:last-of-type {
-  background-color: #4167b3;
-  margin-bottom: 0;
-}/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
